# accesibility-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: program_schemas.json
docs/: context.txt
docs/architecture/: README.md
src/ingestion/pipelines/: build_vector_store.py  load_datasets.py
src/ingestion/schemas/: program_schemas.py
src/services/api/: main.py
src/services/generation/: assistant.py
src/services/knowledge/: vector_search.py
src/services/validation/: models.py  repository.py  validator.py
src/ui/frontend/: app.py
util-scripts/: sample_datasets.py  validate_submission.py
