[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accessibility-ai"
version = "0.1.0"
description = "Accessible communication assistant prototype (ingestion, services, and UI)."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Project Team" }
]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.23.0",
  "pydantic[email]>=2.6.0",
  "pandas>=2.1.0",
  "numpy>=2.0.0",
  "langchain>=0.1.0",
  "chromadb>=0.4.22",
  "sentence-transformers>=2.2.2",
  "sqlalchemy>=2.0.0",
  "streamlit>=1.30.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.2.0",
  "isort>=5.13.0",
]
